--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,159 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
+body{
+  margin:auto;
+  font-family: Roboto;
+  font-size: 16px;
+ 
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+.container{
+  display:grid;
+  text-align:center;
+  grid-template-columns:1fr;
+  grid-template-rows:3 auto;
 }
 
-.App-link {
-  color: #61dafb;
+.todosGrid{
+  width: 80vw;
+  margin:0 auto;
+  align-self: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.titulo{
+  grid-column-start: 1;
+  grid-column-end: 2;
+  background-color: #54A39D;
+  color:white;
+  
+  /*
+  font-size: 2rem;
+  letter-spacing: 0.5rem;
+  */
+
+
 }
+
+
+
+
+.input{
+  
+  
+  
+  /*background:yellow;
+  display:grid;
+  grid-template-columns:7fr 1fr;
+  */
+  
+  
+}
+
+.inputWrapper{
+  
+  display: grid;
+  grid-template-columns: 85% 15%;
+  padding: 15px 15px;
+  font-size: 28px;
+  
+ 
+}
+
+
+
+
+
+
+
+
+.inputWrapper input {
+  font-size: 20px;
+  border:1px solid rgb(128, 69, 115);
+
+  
+  
+  
+ /* font-size: 1rem;*/
+
+}
+
+#addTodo {
+  
+  align-self: left;
+  
+}
+
+#addTodo button{
+  
+  color:white;
+  background-color: #54A39D;
+  font-size: 28px;
+  
+}
+
+
+
+
+
+.todosContainer{
+
+  max-width: 900px;
+  margin:10px auto;
+  display: grid;
+  grid-template-columns: 15% auto 15%;
+  text-align: left;
+  /*padding:0px 20px;
+  grid-template-columns: 1fr 6fr 1fr;*/
+/*grid-auto-rows:auto;*/
+  /*text-align:left;*/
+  border:1px dotted grey;
+  background-origin: shadow 10ex; 
+}
+
+
+.todosContainer:hover{
+  background-color: yellow;
+}
+
+#doneChecker{
+  justify-self: center;
+  align-self: center;
+}
+
+.note p{
+  
+}
+
+.show{
+ 
+  justify-self: center;
+  align-self: center;
+  width: 60px;
+  height: 40px;
+  border:1px solid grey;
+}
+
+.hide{
+  display:none;
+}
+
+.checked{
+  opacity: 0.5;
+  text-decoration: line-through;
+}
+
+/* crear dos clases y aplicar en el hover la que muestra el boton, dejar por defecto la clase que esconde el boton*/
+
+
+
+
+
+
+
+
