--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 *{
   box-sizing: border-box;
+  font-size:10px;
 }
 
 @import url('https://fonts.googleapis.com/css?family=Roboto');
@@ -7,7 +8,7 @@
 body{
   margin:auto;
   font-family: Roboto;
-  font-size: 16px;
+  font-size: 10px;
  
   
 }
@@ -46,6 +47,9 @@ input[type=checkbox] {
 }
 
 .input{
+  width: 100%;
+  height: 4rem;
+  justify-self: center;
   
   
   
@@ -60,9 +64,9 @@ input[type=checkbox] {
 .inputWrapper{
   
   display: grid;
-  grid-template-columns: 85% 15%;
-  padding: 15px 15px;
+  grid-template-columns: 100%;
   font-size: 28px;
+  padding:1rem 0;
   
  
 }
@@ -105,8 +109,6 @@ input[type=checkbox] {
 
 .todosContainer{
 
-  max-width: 900px;
-  margin:10px auto;
   display: grid;
   grid-template-columns: 15% auto 15%;
   text-align: left;
@@ -128,6 +130,10 @@ input[type=checkbox] {
   align-self: center;
 }
 
+.deleteBtn{
+  font-size:10px;
+}
+
 .note p{
   
 }
@@ -147,6 +153,10 @@ input[type=checkbox] {
 
 .checked{
   opacity: 0.5;
+  
+}
+
+.done{
   text-decoration: line-through;
 }
 
